// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStartDateFilter renders with selection: a date range 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    className="mb3"
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming items
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range="2019-05-05--2020-01-01"
    />
  </AggregationBox>
</Row>
`;

exports[`EventStartDateFilter renders with selection: all 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    className="mb3"
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming items
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;

exports[`EventStartDateFilter renders with selection: upcoming 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    className="mb3"
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={true}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming items
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;

exports[`EventStartDateFilter renders without selection 1`] = `
<Row
  className="pa3 bg-white mb3"
  gutter={0}
>
  <AggregationBox
    className="mb3"
    headerAction={null}
    name="Start Date"
  >
    <Row
      align="middle"
      className="mb3"
      gutter={8}
      type="flex"
    >
      <Col>
        <Switch
          checked={false}
          onAnimationEnd={[Function]}
          onChange={[Function]}
        />
      </Col>
      <Col>
        Upcoming items
      </Col>
    </Row>
    <DateRangeFilter
      onChange={[Function]}
      range=""
    />
  </AggregationBox>
</Row>
`;
